Fix post head alignment

--- a/assets/scss/pages/_post.scss
+++ b/assets/scss/pages/_post.scss
@@ -1,10 +1,13 @@
+.post-head {
+	text-align: center;
+}
+
 .post-title {
 	margin-bottom: var(--spacing-abs-small);
 }
 
 .post-head .post-info {
 	margin-bottom: var(--spacing-abs-large);
-	text-align: center;
 }
 
 // Summary (first paragraph)
